# symphony

./: PLAN.md  README.md  README_JP.md  SPEC_GITHUB.md  TASK.md
.github/workflows/: rust.yml
archive/: technical-review-2026-03-09.md
docs/ja/: README.md
docs/ko/: README.md
docs/zh/: README.md
rust/: Cargo.toml
rust/fixtures/claude_mocks/: error.sh  heartbeat.sh  nonzero_exit.sh  slow.sh  stall.sh  success.sh  success_with_cache.sh  verify_attempt.sh
rust/fixtures/workflows/: valid.yaml
rust/src/: config.rs  http_server.rs  lib.rs  main.rs  prompt.rs  workflow.rs
rust/src/agent/: claude.rs  mod.rs
rust/src/domain/: issue.rs  mod.rs  retry.rs  session.rs
rust/src/observability/: metrics.rs  mod.rs
rust/src/orchestrator/: dispatch.rs  mod.rs  retry.rs  state.rs
rust/src/tracker/: github.rs  memory.rs  mod.rs
rust/src/workspace/: hooks.rs  mod.rs
rust/tests/: agent_test.rs  cli_test.rs  domain_test.rs  http_server_test.rs  integration_test.rs  observability_test.rs  orchestrator_dispatch_test.rs  orchestrator_retry_test.rs  orchestrator_state_test.rs  orchestrator_test.rs  tracker_test.rs
rust/tests/common/: mod.rs
