[package]
name = "symphony"
version = "0.1.0"
edition = "2021"
description = "Symphony - Issue tracker to coding agent orchestrator (GitHub + Claude Code variant)"
license = "MIT"
repository = "https://github.com/hiroki-wakamatsu/symphony"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Template rendering
liquid = "0.26"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client (for GitHub API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# HTTP server (optional, http-server feature)
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", optional = true, features = ["cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# File system watching
notify = "7"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
async-trait = "0.1"

# Cancellation tokens (already in tokio-util)

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }  # adds time control (pause/advance)
tempfile = "3"
libc = "0.2"  # SIGTERM in cli_graceful_shutdown test
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
temp-env = "0.3"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["github-issues"]
github-issues = []
github-projects = []
http-server = ["dep:axum", "dep:tower-http"]
